fix spacing and language

--- a/generate/epub.css
+++ b/generate/epub.css
@@ -43,9 +43,9 @@ div[epub|type~='z3998:author'] {
 
 p {
     page-break-inside: avoid;
-    margin-top: 1em;
+    /* margin-top: 1em; */
+    /* margin-bottom: 1em; */
     text-indent: 0em;
-    margin-bottom: 1em;
 }
 
 
